# practice-haskell

./: .gitignore  Geometry.hs  baby.hs  function.hs  higher_order_function.hs  module.hs  practice-haskell.cabal  recursion.hs  stack.yaml
.stack-work/install/x86_64-osx/lts-7.1/8.0.1/flag-cache/: compile-time-player-0.2.0.0-LPYyRGlr0wF3asnZ0xnQZ2  practice-haskell-0.2.0.0
.stack-work/install/x86_64-osx/lts-7.1/8.0.1/lib/x86_64-osx-ghc-8.0.1/compile-time-player-0.2.0.0-LPYyRGlr0wF3asnZ0xnQZ2/: CompileAssistant.dyn_hi  CompileAssistant.hi  CompileTimeQ.dyn_hi  CompileTimeQ.hi  libHScompile-time-player-0.2.0.0-LPYyRGlr0wF3asnZ0xnQZ2-ghc8.0.1.dylib
.stack-work/install/x86_64-osx/lts-7.1/8.0.1/lib/x86_64-osx-ghc-8.0.1/compile-time-player-0.2.0.0-LPYyRGlr0wF3asnZ0xnQZ2/CompileTimeQ/: Core.dyn_hi  Core.hi
.stack-work/install/x86_64-osx/lts-7.1/8.0.1/pkgdb/: compile-time-player-0.2.0.0-LPYyRGlr0wF3asnZ0xnQZ2.conf  package.cache
CompileTimeQ/: Core.dyn_hi  Core.dyn_o  Core.hi
