name:                practice-haskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/
license:             BSD3
license-file:        LICENSE
author:              someone
maintainer:          example@example.com
copyright:           2016 someone
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable baby
  -- hs-source-dirs:      .
  main-is:             baby.hs
  -- other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, compile-time-player
